--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="eyes">
     <div class="left-eye eye">
       <div class="left-inside-eye inside-eye">
         <div class="left_side-inside-eye small-eyes">
@@ -27,6 +28,7 @@
           <div class="black-dot right_black-dot"></div>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
